file delete and add exception controller